--- a/about_it.html
+++ b/about_it.html
@@ -62,7 +62,7 @@
         <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500">Camere</a>
         <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500">Prenota</a>
         <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500">Zona</a>
-        <a href="index.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
+        <a href="about.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
       </div>
       <button class="md:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -253,7 +253,7 @@
           Prenota il tuo soggiorno nella nostra splendida villa e immergiti nell'incantevole cultura, cucina e paesaggi del Lago di Garda
         </p>
         <a 
-          href="booking.html" 
+          href="booking_it.html" 
           class="inline-block py-3 px-8 bg-white text-trulli-900 font-medium hover:bg-white/90 transition-colors"
         >
           Prenota il tuo soggiorno
@@ -284,11 +284,11 @@
         <div>
           <h4 class="text-lg font-medium mb-4">Link</h4>
           <ul class="space-y-2 text-white/70">
-            <li><a href="index.html" class="hover:text-white transition-colors">Home</a></li>
-            <li><a href="about.html" class="hover:text-white transition-colors">Chi siamo</a></li>
-            <li><a href="rooms.html" class="hover:text-white transition-colors">Camere</a></li>
-            <li><a href="booking.html" class="hover:text-white transition-colors">Prenota</a></li>
-            <li><a href="area.html" class="hover:text-white transition-colors">Zona</a></li>
+            <li><a href="index_it.html" class="hover:text-white transition-colors">Home</a></li>
+            <li><a href="about_it.html" class="hover:text-white transition-colors">Chi siamo</a></li>
+            <li><a href="rooms_it.html" class="hover:text-white transition-colors">Camere</a></li>
+            <li><a href="booking_it.html" class="hover:text-white transition-colors">Prenota</a></li>
+            <li><a href="area_it.html" class="hover:text-white transition-colors">Zona</a></li>
           </ul>
         </div>
       
