--- a/index_it.html
+++ b/index_it.html
@@ -64,13 +64,11 @@
       </button>
       <!-- Navigation Links -->
       <div id="menu" class="hidden md:flex md:space-x-6 absolute md:static top-14 left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
-        <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Chi siamo</a>
-        <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Camere</a>
-        <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Prenota</a>
-        <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Zona</a>
-        <a href="index_it.html" id="lang-switch" class="py-2 md:py-0">
-          <img src="static/ita_logo.png" alt="Bandiera ITA" class="w-4 h-4">
-        </a>
+        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Chi siamo</a>
+        <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Camere</a>
+        <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Prenota</a>
+        <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Zona</a>
+        <a href="index.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
       </div>
     </div>
   </nav>
@@ -90,7 +88,7 @@
           <p class="text-lg md:text-xl text-white text-opacity-90 mb-8">
             Comfort moderno incontra il fascino tradizionale nella nostra villa
           </p>
-          <a href="booking.html" class="inline-block py-3 px-6 bg-white text-trulli-900 font-medium hover:bg-opacity-90 transition-colors">
+          <a href="booking_it.html" class="inline-block py-3 px-6 bg-white text-trulli-900 font-medium hover:bg-opacity-90 transition-colors">
             Prenota il tuo soggiorno
           </a>
         </div>
@@ -109,7 +107,7 @@
         <p class="text-base md:text-lg text-trulli-500 mb-8 leading-relaxed">
           Situata vicino al Lago di Garda, la nostra villa offre un mix di architettura tradizionale e comfort moderno per la tua fuga italiana.
         </p>
-        <a href="about.html" class="inline-flex items-center text-trulli-900 hover:text-trulli-500 transition-colors duration-250">
+        <a href="about_it.html" class="inline-flex items-center text-trulli-900 hover:text-trulli-500 transition-colors duration-250">
           <span class="mr-2 font-medium">Scopri la nostra storia</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
         </a>
@@ -181,7 +179,7 @@
       <div class="max-w-3xl mx-auto text-center text-white">
         <h2 class="text-2xl md:text-4xl font-serif mb-6">Inizia la tua esperienza sul Garda</h2>
         <p class="text-white/80 text-base md:text-lg mb-8">Prenota il tuo soggiorno e immergiti nella cultura e nei paesaggi del Lago di Garda.</p>
-        <a href="booking.html" class="inline-block py-3 px-6 bg-white text-trulli-900 font-medium hover:bg-white/90 transition-colors">Prenota il tuo soggiorno</a>
+        <a href="booking_it.html" class="inline-block py-3 px-6 bg-white text-trulli-900 font-medium hover:bg-white/90 transition-colors">Prenota il tuo soggiorno</a>
       </div>
     </div>
   </section>
@@ -206,10 +204,10 @@
         <div>
           <h4 class="text-base md:text-lg font-medium mb-4">Link</h4>
           <ul class="space-y-2 text-white/70 text-sm md:text-base">
-            <li><a href="about.html" class="hover:text-white transition-colors">Chi siamo</a></li>
-            <li><a href="rooms.html" class="hover:text-white transition-colors">Camere</a></li>
-            <li><a href="booking.html" class="hover:text-white transition-colors">Prenota</a></li>
-            <li><a href="area.html" class="hover:text-white transition-colors">Zona</a></li>
+            <li><a href="about_it.html" class="hover:text-white transition-colors">Chi siamo</a></li>
+            <li><a href="rooms_it.html" class="hover:text-white transition-colors">Camere</a></li>
+            <li><a href="booking_it.html" class="hover:text-white transition-colors">Prenota</a></li>
+            <li><a href="area_it.html" class="hover:text-white transition-colors">Zona</a></li>
           </ul>
         </div>
       </div>
