--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nest Guesthouse - Lake Garda</title>
   <meta name="description" content="Experience the authentic Garda Lake in our luxurious villa" />
-  <meta name="keywords" content="nestguesthouse, site">
+  <meta name="keywords" content="nestguesthouse">
+  <meta name="google-site-verification" content="google1a3b92520ca0929d" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
   <link rel="icon" href="static/nest_logo copy.jpeg" type = "image/jpeg">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -53,28 +54,42 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
-    <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
-      <!-- Hamburger Button -->
-      <button id="menu-toggle" class="md:hidden focus:outline-none">
-        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-      <!-- Navigation Links -->
-      <div id="menu" class="hidden md:flex md:space-x-6 absolute md:static top-14 left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
-        <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">About us</a>
-        <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Rooms</a>
-        <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Book Now</a>
-        <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Area</a>
-        <a href="index_it.html" id="lang-switch" class="py-2 md:py-0">
-          <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
-        </a>
-      </div>
+<!-- Navbar -->
+<nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
+  <div class="container mx-auto px-4 flex justify-between items-center">
+    <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
+
+    <!-- Hamburger Button (Mobile) -->
+    <button id="menu-toggle" class="md:hidden focus:outline-none">
+      <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Navigation Links -->
+    <div id="menu"
+      class="hidden md:flex md:space-x-6 md:static absolute top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
+      <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">About us</a>
+      <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Rooms</a>
+      <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Book Now</a>
+      <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Area</a>
+      <a href="index_it.html" id="lang-switch" class="py-2 md:py-0">
+        <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
+      </a>
     </div>
-  </nav>
+  </div>
+</nav>
+
+<!-- Toggle Script -->
+<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('menu');
+
+  toggleBtn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
 
   <!-- Hero -->
   <header class="relative h-[70vh] md:h-screen">
