--- a/booking.html
+++ b/booking.html
@@ -176,6 +176,10 @@
                   <option value="2">2 Children</option>
                   <option value="3">3 Children</option>
                   <option value="4">4 Children</option>
+                  <option value="5">5 Children</option>
+                  <option value="6">6 Children</option>
+                  <option value="7">7 Children</option>
+                  <option value="8">8 Children</option>
                 </select>
               </div>
             </div>
@@ -185,8 +189,8 @@
               <label for="accommodation" class="block text-sm font-medium mb-2">Accommodation Type *</label>
               <select id="accommodation" name="accommodation" class="w-full px-4 py-3 border border-trulli-200 rounded-md focus:outline-none focus:ring-1 focus:ring-trulli-900 focus:border-trulli-900" required>
                 <option value="" disabled selected>Select your preferred suite</option>
-                <option value="trullo-giardino">Suite Giardino (2 bedrooms, kitchen)</option>
-                <option value="trullo-panorama">Suite Panorama (2 bedrooms, balcony)</option>
+                <option value="suite-giardino">Suite Giardino</option>
+                <option value="suite-panorama">Suite Panorama</option>
               </select>
             </div>
             
