--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="nestguesthouse">
   <meta name="google-site-verification" content="google1a3b92520ca0929d" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
-  <link rel="icon" href="static/nest_logo copy.jpeg" type = "image/jpeg">
+  <link rel="icon" href="static/nest_logo copy.jpeg" type="image/jpeg">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -51,6 +51,27 @@
       transform: translateY(-4px);
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
     }
+    /* Checkbox Hack for Menu Toggle */
+    #menu-toggle {
+      display: none;
+    }
+    #menu-toggle:checked ~ #menu {
+      transform: translateX(0);
+      display: flex;
+    }
+    #menu {
+      transition: transform 0.3s ease-in-out;
+      transform: translateX(100%);
+    }
+    @media (min-width: 768px) {
+      #menu {
+        transform: translateX(0);
+        display: flex;
+      }
+      #menu-toggle-label {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -60,36 +81,28 @@
     <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
 
     <!-- Hamburger Button (Mobile) -->
-    <button id="menu-toggle" class="md:hidden focus:outline-none">
+    <input type="checkbox" id="menu-toggle" class="hidden">
+    <label for="menu-toggle" id="menu-toggle-label" class="md:hidden focus:outline-none cursor-pointer">
       <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16" />
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
-    </button>
+    </label>
 
     <!-- Navigation Links -->
-    <div id="menu"
-      class="hidden md:flex md:space-x-6 md:static absolute top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
-      <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">About us</a>
-      <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Rooms</a>
-      <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Book Now</a>
-      <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Area</a>
-      <a href="index_it.html" id="lang-switch" class="py-2 md:py-0">
+    <div id="menu" class="fixed inset-y-0 right-0 w-full bg-white md:static md:w-auto md:bg-transparent flex flex-col items-center justify-center px-4 py-4 h-full md:flex-row md:space-x-6 md:h-auto hidden">
+      <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">About us</a>
+      <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Rooms</a>
+      <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Book Now</a>
+      <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Area</a>
+      <a href="index_it.html" id="lang-switch" class="py-4 md:py-0">
         <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
+      </a>
+      <a href="index.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/eng_logo.png" alt="ITA Flag" class="w-4 h-4">
       </a>
     </div>
   </div>
 </nav>
-
-<!-- Toggle Script -->
-<script>
-  const toggleBtn = document.getElementById('menu-toggle');
-  const menu = document.getElementById('menu');
-
-  toggleBtn.addEventListener('click', () => {
-    menu.classList.toggle('hidden');
-  });
-</script>
 
   <!-- Hero -->
   <header class="relative h-[70vh] md:h-screen">
