--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
       display: none;
     }
     #menu {
-      transition: transform 0.3s ease-in-out;
-      transform: translateX(100%);
       display: none;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in-out;
     }
-    #menu-toggle:checked ~ .nav-container #menu {
-      transform: translateX(0);
+    #menu-toggle:checked ~ #menu {
       display: flex;
+      transform: translateX(0);
     }
     @media (min-width: 768px) {
       #menu {
-        transform: translateX(0);
         display: flex;
+        transform: translateX(0);
       }
       #menu-toggle-label {
         display: none;
@@ -81,7 +81,7 @@
 <body>
 <!-- Navbar -->
 <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
-  <div class="container mx-auto px-4 flex justify-between items-center nav-container">
+  <div class="container mx-auto px-4 flex justify-between items-center">
     <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
 
     <!-- Hamburger Button (Mobile) -->
