--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       <a href="index_it.html" id="lang-switch" class="py-4 md:py-0">
         <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
       </a>
+      <a href="index.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
+      </a>
+      <a href="">39</a>
     </div>
   </div>
 </nav>
